# sjmvowerp3be

./: .env  .env.sqlserver  .gitignore  .graphify_detect.json  .graphify_python  CHANGELOG_STOCK_VIEW_UPDATE.md  CLAUDE.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  README_YARN_QUALITY.md  STATUS_REPORT.md  VERIFY_IMPLEMENTATION.sh  YARN_QUALITY_API_TESTING_GUIDE.md  YARN_QUALITY_COMPLETE_REFERENCE.md  YARN_QUALITY_DATABASE_SETUP.md  YARN_QUALITY_IMPLEMENTATION_CHECKLIST.md  YARN_QUALITY_MASTER_SUMMARY.md  paycreate.md  pyproject.toml  requirements.txt  run_server.py  vowerp3be.spec  vowerp3beui.code-workspace  vowsls_ddl_schema.xlsx
.aws/: task-definition-be.json  task-definition.json
.claude/: settings.json  settings.local.json
.cursor/: project-context.md
.github/: copilot-instructions.md
.github/agents/: api-builder.agent.md  dbmanager.agent.md  migration-writer.agent.md  reviewer.agent.md  tenant-auditor.agent.md  test-writer.agent.md
.github/docs/: invoice-type-system.md
.github/workflows/: deploy.yml
contracts/: indent.create.v1.yaml
dbqueries/: create_yarn_quality_tables.sql  procurement.sql  usertableconsole.sql  usertables.sql
docs/: GST_PROCUREMENT.md  TENANT_PROVISIONING.md  accounting-module-design.md  bom_costing_db_instructions_1.md  procurement-inward-to-bill-pass-approval-flows.md
env/: database.env  keys.env
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: generate_ddl_excel.py  migrate_view.py  watch_bio_att_job.py
src/: database.py  main.py  models.py
src/VOWERP3BE.egg-info/: PKG-INFO  (+3 more)
(+324 files in other folders)
